[tool.poetry]
name = "chatgpt-bot"
version = "0.1.0"
description = ""
authors = ["tpob <tpob@tpob.xyz>"]
readme = "README.md"
packages = [{include = "chatgpt_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
telethon = "^1.27.0"
click = "^8.1.3"
pyyaml = "^6.0"
pydantic = "^1.10.5"
httpx = "^0.23.3"
tiktoken = "^0.3.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
